@@ -57,6 +57,7 @@ voltage_bec = SpannungBEC
 trip = Strecke
 distance_start = Entfernung
 direction_start = RichtungStart
+home_direction = StartRichtung
 glide_ratio = Gleitzahl
 speed_glide_ratio = SpeedGleitzahl
 runs_per_minute = Drehzahl
