@@ -57,6 +57,7 @@ voltage_bec = VoltageBEC
 trip = Trip
 distance_start = Distance
 direction_start = Direction
+home_direction = HomeDirection
 glide_ratio = GlideRatio
 speed_glide_ratio = SpeedGlideRatio
 runs_per_minute = Revolution
