@@ -483,11 +483,12 @@
                 <label>label_event GPS</label>
             </Measurement>
             <Measurement>
-                <name>HomeDirection</name>
+                <name>home_direction</name>
                 <symbol></symbol>
                 <unit>°</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
+                <property name="factor" value="2.0" type="Double" description="factor to measurement value"/>
             </Measurement>
             <Measurement>
                 <name>misc GPS_1</name>
